--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
   #app {
     width: 100%;
     height: 100%;
-    background-color: #f6f6f9;
+    background-color: var(--color-bg-1);
   }
 </style>
