--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
   #app {
     width: 100%;
     height: 100%;
-    background-color: var(--color-bg-1);
+    background-color: var(--el-bg-color-page);
   }
 </style>
